---
source: spade-tests/src/typeinference.rs
---
pipeline(1) x(clk: clock) -> bool {
        let a: int<8> = stage.ready;
    reg;
        true
}

error: Expected type int<8>, got bool
  ┌─ testinput:2:25
  │
2 │         let a: int<8> = stage.ready;
  │                         ^^^^^^^^^^^ Expected int<8> here


